Model Trained Successfully

--- a/research/3_data_transformation.ipynb
+++ b/research/3_data_transformation.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,9 +120,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-11-30 22:10:14,064: INFO: config: PyTorch version 2.4.1 available.]\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from Abstractive_Text_Summarizer.logging import logger\n",
@@ -132,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,35 +172,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-11-30 17:13:18,084: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-11-30 17:13:18,089: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-11-30 17:13:18,091: INFO: common: created directory at: artifacts]\n",
-      "[2024-11-30 17:13:18,095: INFO: common: created directory at: artifacts/data_transformation]\n"
+      "[2024-11-30 22:16:04,071: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-11-30 22:16:04,085: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-11-30 22:16:04,089: INFO: common: created directory at: artifacts]\n"
      ]
     },
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\vvkar\\miniconda3\\envs\\AbsTextSumm\\lib\\site-packages\\huggingface_hub\\file_download.py:139: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\vvkar\\.cache\\huggingface\\hub\\models--google--pegasus-cnn_dailymail. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
-      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
-      "  warnings.warn(message)\n",
-      "Map:   0%|          | 0/14732 [00:00<?, ? examples/s]c:\\Users\\vvkar\\miniconda3\\envs\\AbsTextSumm\\lib\\site-packages\\transformers\\tokenization_utils_base.py:4114: UserWarning: `as_target_tokenizer` is deprecated and will be removed in v5 of Transformers. You can tokenize your labels by using the argument `text_target` of the regular `__call__` method (either in the same call as your input texts if you use the same keyword arguments, or in a separate call.\n",
-      "  warnings.warn(\n",
-      "Map: 100%|██████████| 14732/14732 [00:02<00:00, 5390.27 examples/s]\n",
-      "Map: 100%|██████████| 819/819 [00:00<00:00, 4733.74 examples/s]\n",
-      "Map: 100%|██████████| 818/818 [00:00<00:00, 4984.87 examples/s]\n",
-      "Saving the dataset (1/1 shards): 100%|██████████| 14732/14732 [00:00<00:00, 311352.96 examples/s]\n",
-      "Saving the dataset (1/1 shards): 100%|██████████| 819/819 [00:00<00:00, 71175.33 examples/s]\n",
-      "Saving the dataset (1/1 shards): 100%|██████████| 818/818 [00:00<00:00, 77739.17 examples/s]\n"
+      "[2024-11-30 22:16:04,090: INFO: common: created directory at: artifacts/data_transformation]\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "af55832bec3045ecbe982f7af10be173",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/14732 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "98b70fbc44c141ec95cdbf59d29993d9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/819 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0ba3339b277d49f987354e5db27d52b3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/818 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2526e27e2c5b494a912a21682c7e2eec",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Saving the dataset (0/1 shards):   0%|          | 0/14732 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7615564a208f4f19aeb845849814a29a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Saving the dataset (0/1 shards):   0%|          | 0/819 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "66bd05b7beac423aa003a0ae5b0c6e9a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Saving the dataset (0/1 shards):   0%|          | 0/818 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
