--- a/research/1_data_ingestion.ipynb
+++ b/research/1_data_ingestion.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,44 +168,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-11-30 16:00:46,828: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-11-30 16:00:46,833: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-11-30 16:00:46,836: INFO: common: created directory at: artifacts]\n",
-      "[2024-11-30 16:00:46,839: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2024-11-30 16:01:20,068: INFO: 1434958058: artifacts/data_ingestion/data.zip download! with following info: \n",
-      "Connection: close\n",
-      "Content-Length: 7903594\n",
-      "Cache-Control: max-age=300\n",
-      "Content-Security-Policy: default-src 'none'; style-src 'unsafe-inline'; sandbox\n",
-      "Content-Type: application/zip\n",
-      "ETag: \"dbc016a060da18070593b83afff580c9b300f0b6ea4147a7988433e04df246ca\"\n",
-      "Strict-Transport-Security: max-age=31536000\n",
-      "X-Content-Type-Options: nosniff\n",
-      "X-Frame-Options: deny\n",
-      "X-XSS-Protection: 1; mode=block\n",
-      "X-GitHub-Request-Id: 26DB:7C9BB:2130D5:2A6ECD:674AE958\n",
-      "Accept-Ranges: bytes\n",
-      "Date: Sat, 30 Nov 2024 10:30:48 GMT\n",
-      "Via: 1.1 varnish\n",
-      "X-Served-By: cache-hyd1100033-HYD\n",
-      "X-Cache: MISS\n",
-      "X-Cache-Hits: 0\n",
-      "X-Timer: S1732962648.276290,VS0,VE659\n",
-      "Vary: Authorization,Accept-Encoding,Origin\n",
-      "Access-Control-Allow-Origin: *\n",
-      "Cross-Origin-Resource-Policy: cross-origin\n",
-      "X-Fastly-Request-ID: aa12a4cfeb756a1244c407699a91b529b5a0a84e\n",
-      "Expires: Sat, 30 Nov 2024 10:35:48 GMT\n",
-      "Source-Age: 0\n",
-      "\n",
-      "]\n"
+      "[2024-11-30 22:16:44,653: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-11-30 22:16:44,660: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-11-30 22:16:44,665: INFO: common: created directory at: artifacts]\n",
+      "[2024-11-30 22:16:44,668: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2024-11-30 22:16:44,671: INFO: 1434958058: File already exists of size: ~ 7718 KB]\n"
      ]
     }
    ],
