changed from test to train

--- a/research/3_data_transformation.ipynb
+++ b/research/3_data_transformation.ipynb
@@ -2,40 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'c:\\\\Users\\\\vvkar\\\\OneDrive\\\\Desktop\\\\major project\\\\Abstractive-Text-Summarizer\\\\research'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir(\"../\")"
+    "import os"
    ]
   },
   {
@@ -46,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\vvkar\\\\OneDrive\\\\Desktop\\\\major project\\\\Abstractive-Text-Summarizer'"
+       "'c:\\\\Users\\\\vvkar\\\\OneDrive\\\\Desktop\\\\major project\\\\Abstractive-Text-Summarizer\\\\research'"
       ]
      },
      "execution_count": 4,
@@ -64,6 +35,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "os.chdir(\"../\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\vvkar\\\\OneDrive\\\\Desktop\\\\major project\\\\Abstractive-Text-Summarizer'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from dataclasses import dataclass\n",
     "from pathlib import Path\n",
     "\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,14 +120,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-11-30 22:10:14,064: INFO: config: PyTorch version 2.4.1 available.]\n"
+      "[2024-12-01 12:29:49,880: INFO: config: PyTorch version 2.4.1 available.]\n"
      ]
     }
    ],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,22 +179,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-11-30 22:16:04,071: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-11-30 22:16:04,085: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-11-30 22:16:04,089: INFO: common: created directory at: artifacts]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2024-11-30 22:16:04,090: INFO: common: created directory at: artifacts/data_transformation]\n"
+      "[2024-12-01 12:29:56,367: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-12-01 12:29:56,392: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-12-01 12:29:56,396: INFO: common: created directory at: artifacts]\n",
+      "[2024-12-01 12:29:56,400: INFO: common: created directory at: artifacts/data_transformation]\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af55832bec3045ecbe982f7af10be173",
+       "model_id": "6a2f63d785154cea967d6c453c5ae89a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -206,9 +200,17 @@
      "output_type": "display_data"
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\vvkar\\miniconda3\\envs\\AbsTextSumm\\lib\\site-packages\\transformers\\tokenization_utils_base.py:4114: UserWarning: `as_target_tokenizer` is deprecated and will be removed in v5 of Transformers. You can tokenize your labels by using the argument `text_target` of the regular `__call__` method (either in the same call as your input texts if you use the same keyword arguments, or in a separate call.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "98b70fbc44c141ec95cdbf59d29993d9",
+       "model_id": "76aacd4b2efb42f980714a4a2b62c3ca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -222,7 +224,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ba3339b277d49f987354e5db27d52b3",
+       "model_id": "9a054a41187641e5a552f5c7ec51c8f3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -236,7 +238,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2526e27e2c5b494a912a21682c7e2eec",
+       "model_id": "67a16acf823043a1a5cc5dd8f85f6d2c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -250,7 +252,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7615564a208f4f19aeb845849814a29a",
+       "model_id": "8efb2741357d46e6b00da8b0e7ac4558",
        "version_major": 2,
        "version_minor": 0
       },
@@ -264,7 +266,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "66bd05b7beac423aa003a0ae5b0c6e9a",
+       "model_id": "10fc49abcd744ce1971ab16fb5fd704d",
        "version_major": 2,
        "version_minor": 0
       },
