--- a/research/4_model_trainer.ipynb
+++ b/research/4_model_trainer.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,14 +139,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-11-30 20:27:42,823: INFO: config: PyTorch version 2.4.1 available.]\n"
+      "[2024-12-01 12:30:46,581: INFO: config: PyTorch version 2.4.1 available.]\n"
      ]
     }
    ],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,26 +179,17 @@
     "        #loading data \n",
     "        dataset_samsum_pt = load_from_disk(self.config.data_path)\n",
     "\n",
-    "        # trainer_args = TrainingArguments(\n",
-    "        #     output_dir=self.config.root_dir, num_train_epochs=self.config.num_train_epochs, warmup_steps=self.config.warmup_steps,\n",
-    "        #     per_device_train_batch_size=self.config.per_device_train_batch_size, per_device_eval_batch_size=self.config.per_device_train_batch_size,\n",
-    "        #     weight_decay=self.config.weight_decay, logging_steps=self.config.logging_steps,\n",
-    "        #     evaluation_strategy=self.config.evaluation_strategy, eval_steps=self.config.eval_steps, save_steps=1e6,\n",
-    "        #     gradient_accumulation_steps=self.config.gradient_accumulation_steps\n",
-    "        # ) \n",
-    "\n",
-    "\n",
     "        trainer_args = TrainingArguments(\n",
     "            output_dir=self.config.root_dir, num_train_epochs=1, warmup_steps=500,\n",
     "            per_device_train_batch_size=1, per_device_eval_batch_size=1,\n",
     "            weight_decay=0.01, logging_steps=10,\n",
-    "            eval_strategy='steps', eval_steps=500, save_steps=1e6,\n",
+    "            evaluation_strategy='steps', eval_steps=500, save_steps=1e6,\n",
     "            gradient_accumulation_steps=16\n",
     "        ) \n",
     "\n",
     "        trainer = Trainer(model=model_pegasus, args=trainer_args,\n",
     "                  tokenizer=tokenizer, data_collator=seq2seq_data_collator,\n",
-    "                  train_dataset=dataset_samsum_pt[\"test\"], \n",
+    "                  train_dataset=dataset_samsum_pt[\"train\"], \n",
     "                  eval_dataset=dataset_samsum_pt[\"validation\"])\n",
     "        \n",
     "        trainer.train()\n",
@@ -211,17 +202,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-11-30 20:28:04,629: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-11-30 20:28:04,636: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-11-30 20:28:04,646: INFO: common: created directory at: artifacts]\n",
-      "[2024-11-30 20:28:04,651: INFO: common: created directory at: artifacts/model_trainer]\n"
+      "[2024-12-01 12:30:52,740: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-12-01 12:30:52,752: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-12-01 12:30:52,753: INFO: common: created directory at: artifacts]\n",
+      "[2024-12-01 12:30:52,762: INFO: common: created directory at: artifacts/model_trainer]\n"
      ]
     },
     {
@@ -230,19 +221,21 @@
      "text": [
       "Some weights of PegasusForConditionalGeneration were not initialized from the model checkpoint at google/pegasus-cnn_dailymail and are newly initialized: ['model.decoder.embed_positions.weight', 'model.encoder.embed_positions.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-      "C:\\Users\\vvkar\\AppData\\Local\\Temp\\ipykernel_32684\\3169447631.py:33: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Trainer.__init__`. Use `processing_class` instead.\n",
+      "c:\\Users\\vvkar\\miniconda3\\envs\\AbsTextSumm\\lib\\site-packages\\transformers\\training_args.py:1568: FutureWarning: `evaluation_strategy` is deprecated and will be removed in version 4.46 of 🤗 Transformers. Use `eval_strategy` instead\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\vvkar\\AppData\\Local\\Temp\\ipykernel_14440\\177660330.py:24: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Trainer.__init__`. Use `processing_class` instead.\n",
       "  trainer = Trainer(model=model_pegasus, args=trainer_args,\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c558a071b7d949fdba6cfe8bd8225e80",
+       "model_id": "e7d66f8bf84343c88c690a3ff94a5a5c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/51 [00:00<?, ?it/s]"
+       "  0%|          | 0/920 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -252,26 +245,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'loss': 3.1101, 'grad_norm': 511.2713928222656, 'learning_rate': 1.0000000000000002e-06, 'epoch': 0.2}\n",
-      "{'loss': 3.0467, 'grad_norm': 253.44041442871094, 'learning_rate': 2.0000000000000003e-06, 'epoch': 0.39}\n",
-      "{'loss': 3.1613, 'grad_norm': 166.07740783691406, 'learning_rate': 3e-06, 'epoch': 0.59}\n",
-      "{'loss': 2.9904, 'grad_norm': 321.72283935546875, 'learning_rate': 4.000000000000001e-06, 'epoch': 0.78}\n",
-      "{'loss': 2.8546, 'grad_norm': 733.7205810546875, 'learning_rate': 5e-06, 'epoch': 0.98}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\vvkar\\miniconda3\\envs\\AbsTextSumm\\lib\\site-packages\\transformers\\modeling_utils.py:2817: UserWarning: Moving the following attributes in the config to the generation config: {'max_length': 128, 'min_length': 32, 'num_beams': 8, 'length_penalty': 0.8}. You are seeing this warning because you've set generation parameters in the model config, as opposed to in the generation config.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'train_runtime': 3920.4038, 'train_samples_per_second': 0.209, 'train_steps_per_second': 0.013, 'train_loss': 3.0233642727720973, 'epoch': 1.0}\n"
+      "{'loss': 3.1995, 'grad_norm': 322.5968322753906, 'learning_rate': 1.0000000000000002e-06, 'epoch': 0.01}\n",
+      "{'loss': 3.2262, 'grad_norm': 154.7872314453125, 'learning_rate': 2.0000000000000003e-06, 'epoch': 0.02}\n",
+      "{'loss': 2.9225, 'grad_norm': 180.6544189453125, 'learning_rate': 3e-06, 'epoch': 0.03}\n",
+      "{'loss': 2.8533, 'grad_norm': 244.4595184326172, 'learning_rate': 4.000000000000001e-06, 'epoch': 0.04}\n",
+      "{'loss': 2.6912, 'grad_norm': 227.75010681152344, 'learning_rate': 5e-06, 'epoch': 0.05}\n",
+      "{'loss': 2.7275, 'grad_norm': 168.98187255859375, 'learning_rate': 6e-06, 'epoch': 0.07}\n",
+      "{'loss': 2.6254, 'grad_norm': 200.16253662109375, 'learning_rate': 7.000000000000001e-06, 'epoch': 0.08}\n",
+      "{'loss': 2.4282, 'grad_norm': 175.9784393310547, 'learning_rate': 8.000000000000001e-06, 'epoch': 0.09}\n",
+      "{'loss': 2.4937, 'grad_norm': 125.54471588134766, 'learning_rate': 9e-06, 'epoch': 0.1}\n",
+      "{'loss': 2.4588, 'grad_norm': 112.201416015625, 'learning_rate': 1e-05, 'epoch': 0.11}\n",
+      "{'loss': 2.2212, 'grad_norm': 118.2083511352539, 'learning_rate': 1.1000000000000001e-05, 'epoch': 0.12}\n",
+      "{'loss': 2.1863, 'grad_norm': 104.86922454833984, 'learning_rate': 1.2e-05, 'epoch': 0.13}\n",
+      "{'loss': 2.1564, 'grad_norm': 613.8680419921875, 'learning_rate': 1.3000000000000001e-05, 'epoch': 0.14}\n",
+      "{'loss': 2.1194, 'grad_norm': 119.76716613769531, 'learning_rate': 1.4000000000000001e-05, 'epoch': 0.15}\n",
+      "{'loss': 2.0239, 'grad_norm': 383.7184143066406, 'learning_rate': 1.5e-05, 'epoch': 0.16}\n",
+      "{'loss': 1.9895, 'grad_norm': 505.9063720703125, 'learning_rate': 1.6000000000000003e-05, 'epoch': 0.17}\n",
+      "{'loss': 2.0215, 'grad_norm': 1352.6005859375, 'learning_rate': 1.7000000000000003e-05, 'epoch': 0.18}\n",
+      "{'loss': 2.0314, 'grad_norm': 135.8369598388672, 'learning_rate': 1.8e-05, 'epoch': 0.2}\n",
+      "{'loss': 1.9008, 'grad_norm': 92.9698257446289, 'learning_rate': 1.9e-05, 'epoch': 0.21}\n",
+      "{'loss': 1.9328, 'grad_norm': 89.91352081298828, 'learning_rate': 2e-05, 'epoch': 0.22}\n",
+      "{'loss': 1.9138, 'grad_norm': 206.99200439453125, 'learning_rate': 2.1e-05, 'epoch': 0.23}\n",
+      "{'loss': 1.7955, 'grad_norm': 84.08918762207031, 'learning_rate': 2.2000000000000003e-05, 'epoch': 0.24}\n",
+      "{'loss': 1.8824, 'grad_norm': 60.092716217041016, 'learning_rate': 2.3000000000000003e-05, 'epoch': 0.25}\n",
+      "{'loss': 1.7885, 'grad_norm': 73.39930725097656, 'learning_rate': 2.4e-05, 'epoch': 0.26}\n",
+      "{'loss': 1.8739, 'grad_norm': 66.56136322021484, 'learning_rate': 2.5e-05, 'epoch': 0.27}\n",
+      "{'loss': 1.7839, 'grad_norm': 54.935638427734375, 'learning_rate': 2.6000000000000002e-05, 'epoch': 0.28}\n",
+      "{'loss': 1.725, 'grad_norm': 82.91046905517578, 'learning_rate': 2.7000000000000002e-05, 'epoch': 0.29}\n"
      ]
     }
    ],
