--- a/research/5_model_evaluation.ipynb
+++ b/research/5_model_evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "'c:\\\\Users\\\\vvkar\\\\OneDrive\\\\Desktop\\\\major project\\\\Abstractive-Text-Summarizer\\\\research'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "'c:\\\\Users\\\\vvkar\\\\OneDrive\\\\Desktop\\\\major project\\\\Abstractive-Text-Summarizer'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,12 +134,14 @@
     "import evaluate\n",
     "import torch\n",
     "import pandas as pd\n",
-    "from tqdm import tqdm\n"
+    "from tqdm import tqdm\n",
+    "from sklearn.metrics import f1_score\n",
+    "import numpy as np\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +196,6 @@
     "        device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "        tokenizer = AutoTokenizer.from_pretrained(self.config.tokenizer_path)\n",
     "        model_pegasus = AutoModelForSeq2SeqLM.from_pretrained(self.config.model_path).to(device)\n",
-    "       \n",
     "        #loading data \n",
     "        dataset_samsum_pt = load_from_disk(self.config.data_path)\n",
     "\n",
@@ -206,40 +207,41 @@
     "        score = self.calculate_metric_on_test_ds(\n",
     "        dataset_samsum_pt['test'][0:10], rouge_metric, model_pegasus, tokenizer, batch_size = 2, column_text = 'dialogue', column_summary= 'summary'\n",
     "            )\n",
-    "\n",
+    "        \n",
+    "    \n",
+    "    \n",
     "        rouge_dict = {rn: score[rn] for rn in rouge_names }\n",
-    "\n",
     "        df = pd.DataFrame(rouge_dict, index = ['pegasus'] )\n",
     "        df.to_csv(self.config.metric_file_name, index=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-12-01 08:46:52,565: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-12-01 08:46:52,572: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-12-01 08:46:52,575: INFO: common: created directory at: artifacts]\n",
-      "[2024-12-01 08:46:52,578: INFO: common: created directory at: artifacts/model_evaluation]\n"
+      "[2025-01-08 16:34:01,509: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-01-08 16:34:01,523: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-01-08 16:34:01,530: INFO: common: created directory at: artifacts]\n",
+      "[2025-01-08 16:34:01,537: INFO: common: created directory at: artifacts/model_evaluation]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [02:17<00:00, 27.58s/it]"
+      "100%|██████████| 5/5 [02:34<00:00, 30.83s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-12-01 08:49:17,639: INFO: rouge_scorer: Using default tokenizer.]\n"
+      "[2025-01-08 16:36:44,284: INFO: rouge_scorer: Using default tokenizer.]\n"
      ]
     },
     {
@@ -247,6 +249,19 @@
      "output_type": "stream",
      "text": [
       "\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "string indices must be integers",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m     model_evaluation_config\u001b[38;5;241m.\u001b[39mevaluate()\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m----> 7\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
+      "Cell \u001b[1;32mIn[15], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m     model_evaluation_config \u001b[38;5;241m=\u001b[39m config\u001b[38;5;241m.\u001b[39mget_model_evaluation_config()\n\u001b[0;32m      4\u001b[0m     model_evaluation_config \u001b[38;5;241m=\u001b[39m ModelEvaluation(config\u001b[38;5;241m=\u001b[39mmodel_evaluation_config)\n\u001b[1;32m----> 5\u001b[0m     \u001b[43mmodel_evaluation_config\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mevaluate\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
+      "Cell \u001b[1;32mIn[14], line 68\u001b[0m, in \u001b[0;36mModelEvaluation.evaluate\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     65\u001b[0m reference_summaries \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m     67\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m sample \u001b[38;5;129;01min\u001b[39;00m dataset_samsum_pt[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtest\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;241m0\u001b[39m:\u001b[38;5;241m10\u001b[39m]:\n\u001b[1;32m---> 68\u001b[0m     input_text \u001b[38;5;241m=\u001b[39m \u001b[43msample\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdialogue\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[0;32m     69\u001b[0m     reference_summary \u001b[38;5;241m=\u001b[39m sample[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msummary\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m     71\u001b[0m   \u001b[38;5;66;03m# Generate prediction\u001b[39;00m\n",
+      "\u001b[1;31mTypeError\u001b[0m: string indices must be integers"
      ]
     }
    ],
