--- a/research/4_model_trainer.ipynb
+++ b/research/4_model_trainer.ipynb
@@ -146,7 +146,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-01-08 16:49:57,018: INFO: config: PyTorch version 2.4.1 available.]\n"
+      "[2025-01-09 11:19:20,285: INFO: config: PyTorch version 2.4.1 available.]\n"
      ]
     }
    ],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
     "            output_dir=self.config.root_dir, num_train_epochs=1, warmup_steps=500,\n",
     "            per_device_train_batch_size=1, per_device_eval_batch_size=1,\n",
     "            weight_decay=0.01, logging_steps=10,\n",
-    "            evaluation_strategy='steps', eval_steps=500, save_steps=1e6,\n",
+    "            eval_strategy='steps', eval_steps=500, save_steps=1e6,\n",
     "            gradient_accumulation_steps=16\n",
     "        ) \n",
     "\n",
