--- a/research/5_model_evaluation.ipynb
+++ b/research/5_model_evaluation.ipynb
@@ -217,51 +217,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-01-08 16:34:01,509: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2025-01-08 16:34:01,523: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2025-01-08 16:34:01,530: INFO: common: created directory at: artifacts]\n",
-      "[2025-01-08 16:34:01,537: INFO: common: created directory at: artifacts/model_evaluation]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 5/5 [02:34<00:00, 30.83s/it]"
+      "[2025-01-08 17:40:15,688: INFO: common: yaml file: config\\config.yaml loaded successfully]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-01-08 16:36:44,284: INFO: rouge_scorer: Using default tokenizer.]\n"
+      "[2025-01-08 17:40:15,704: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-01-08 17:40:15,709: INFO: common: created directory at: artifacts]\n",
+      "[2025-01-08 17:40:15,711: INFO: common: created directory at: artifacts/model_evaluation]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n"
+      "100%|██████████| 5/5 [05:31<00:00, 66.34s/it]\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "string indices must be integers",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[15], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m     model_evaluation_config\u001b[38;5;241m.\u001b[39mevaluate()\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m----> 7\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
-      "Cell \u001b[1;32mIn[15], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m     model_evaluation_config \u001b[38;5;241m=\u001b[39m config\u001b[38;5;241m.\u001b[39mget_model_evaluation_config()\n\u001b[0;32m      4\u001b[0m     model_evaluation_config \u001b[38;5;241m=\u001b[39m ModelEvaluation(config\u001b[38;5;241m=\u001b[39mmodel_evaluation_config)\n\u001b[1;32m----> 5\u001b[0m     \u001b[43mmodel_evaluation_config\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mevaluate\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
-      "Cell \u001b[1;32mIn[14], line 68\u001b[0m, in \u001b[0;36mModelEvaluation.evaluate\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     65\u001b[0m reference_summaries \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m     67\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m sample \u001b[38;5;129;01min\u001b[39;00m dataset_samsum_pt[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtest\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;241m0\u001b[39m:\u001b[38;5;241m10\u001b[39m]:\n\u001b[1;32m---> 68\u001b[0m     input_text \u001b[38;5;241m=\u001b[39m \u001b[43msample\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdialogue\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[0;32m     69\u001b[0m     reference_summary \u001b[38;5;241m=\u001b[39m sample[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msummary\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m     71\u001b[0m   \u001b[38;5;66;03m# Generate prediction\u001b[39;00m\n",
-      "\u001b[1;31mTypeError\u001b[0m: string indices must be integers"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2025-01-08 17:45:54,034: INFO: rouge_scorer: Using default tokenizer.]\n"
      ]
     }
    ],
