--- a/research/4_model_trainer.ipynb
+++ b/research/4_model_trainer.ipynb
@@ -180,12 +180,19 @@
     "        dataset_samsum_pt = load_from_disk(self.config.data_path)\n",
     "\n",
     "        trainer_args = TrainingArguments(\n",
-    "            output_dir=self.config.root_dir, num_train_epochs=1, warmup_steps=500,\n",
-    "            per_device_train_batch_size=1, per_device_eval_batch_size=1,\n",
-    "            weight_decay=0.01, logging_steps=10,\n",
-    "            eval_strategy='steps', eval_steps=500, save_steps=1e6,\n",
-    "            gradient_accumulation_steps=16\n",
+    "            output_dir=self.config.root_dir, num_train_epochs=self.config.num_train_epochs, warmup_steps=self.config.warmup_steps,\n",
+    "            per_device_train_batch_size=self.config.per_device_train_batch_size, per_device_eval_batch_size=self.config.per_device_train_batch_size,\n",
+    "            weight_decay=self.config.weight_decay, logging_steps=self.config.logging_steps,\n",
+    "            eval_strategy=self.config.eval_strategy, eval_steps=self.config.eval_steps, save_steps=self.config.save_steps,\n",
+    "            gradient_accumulation_steps=self.config.gradient_accumulation_steps\n",
     "        ) \n",
+    "\n",
+    "        ##trainer_args = TrainingArguments(\n",
+    "        #    output_dir=self.config.root_dir, num_train_epochs=1, warmup_steps=500,\n",
+    "        #    weight_decay=0.01, logging_steps=10,\n",
+    "         #   eval_strategy='steps', eval_steps=500, save_steps=1e6,\n",
+    "         #   gradient_accumulation_steps=16\n",
+    "        #) \n",
     "\n",
     "        trainer = Trainer(model=model_pegasus, args=trainer_args,\n",
     "                  tokenizer=tokenizer, data_collator=seq2seq_data_collator,\n",
