--- a/research/4_model_trainer.ipynb
+++ b/research/4_model_trainer.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
     "    per_device_train_batch_size: int\n",
     "    weight_decay: float\n",
     "    logging_steps: int\n",
-    "    evaluation_strategy: str\n",
+    "    eval_strategy: str\n",
     "    eval_steps: int\n",
     "    save_steps: float\n",
     "    gradient_accumulation_steps: int"
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,8 +128,8 @@
     "            per_device_train_batch_size = params.per_device_train_batch_size,\n",
     "            weight_decay = params.weight_decay,\n",
     "            logging_steps = params.logging_steps,\n",
-    "            evaluation_strategy = params.evaluation_strategy,\n",
-    "            eval_steps = params.evaluation_strategy,\n",
+    "            eval_strategy = params.eval_strategy,\n",
+    "            eval_steps = params.eval_steps,\n",
     "            save_steps = params.save_steps,\n",
     "            gradient_accumulation_steps = params.gradient_accumulation_steps\n",
     "        )\n",
@@ -139,17 +139,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2025-01-09 11:19:20,285: INFO: config: PyTorch version 2.4.1 available.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from transformers import TrainingArguments, Trainer\n",
     "from transformers import DataCollatorForSeq2Seq\n",
@@ -160,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,18 +203,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-12-01 12:30:52,740: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-12-01 12:30:52,752: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-12-01 12:30:52,753: INFO: common: created directory at: artifacts]\n",
-      "[2024-12-01 12:30:52,762: INFO: common: created directory at: artifacts/model_trainer]\n"
+      "[2025-01-09 12:12:36,677: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-01-09 12:12:36,689: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-01-09 12:12:36,697: INFO: common: created directory at: artifacts]\n",
+      "[2025-01-09 12:12:36,697: INFO: common: created directory at: artifacts/model_trainer]\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f6dd7d31810d4a0c8035d1406ccb81f3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/2.28G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "name": "stderr",
@@ -230,57 +236,31 @@
      "text": [
       "Some weights of PegasusForConditionalGeneration were not initialized from the model checkpoint at google/pegasus-cnn_dailymail and are newly initialized: ['model.decoder.embed_positions.weight', 'model.encoder.embed_positions.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-      "c:\\Users\\vvkar\\miniconda3\\envs\\AbsTextSumm\\lib\\site-packages\\transformers\\training_args.py:1568: FutureWarning: `evaluation_strategy` is deprecated and will be removed in version 4.46 of 🤗 Transformers. Use `eval_strategy` instead\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\vvkar\\AppData\\Local\\Temp\\ipykernel_14440\\177660330.py:24: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Trainer.__init__`. Use `processing_class` instead.\n",
+      "C:\\Users\\vvkar\\AppData\\Local\\Temp\\ipykernel_16324\\1479646667.py:31: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Trainer.__init__`. Use `processing_class` instead.\n",
       "  trainer = Trainer(model=model_pegasus, args=trainer_args,\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7d66f8bf84343c88c690a3ff94a5a5c",
+       "model_id": "3a98aa1764a946fd822c8ac20d65b852",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/920 [00:00<?, ?it/s]"
+       "  0%|          | 0/4600 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "{'loss': 3.1995, 'grad_norm': 322.5968322753906, 'learning_rate': 1.0000000000000002e-06, 'epoch': 0.01}\n",
-      "{'loss': 3.2262, 'grad_norm': 154.7872314453125, 'learning_rate': 2.0000000000000003e-06, 'epoch': 0.02}\n",
-      "{'loss': 2.9225, 'grad_norm': 180.6544189453125, 'learning_rate': 3e-06, 'epoch': 0.03}\n",
-      "{'loss': 2.8533, 'grad_norm': 244.4595184326172, 'learning_rate': 4.000000000000001e-06, 'epoch': 0.04}\n",
-      "{'loss': 2.6912, 'grad_norm': 227.75010681152344, 'learning_rate': 5e-06, 'epoch': 0.05}\n",
-      "{'loss': 2.7275, 'grad_norm': 168.98187255859375, 'learning_rate': 6e-06, 'epoch': 0.07}\n",
-      "{'loss': 2.6254, 'grad_norm': 200.16253662109375, 'learning_rate': 7.000000000000001e-06, 'epoch': 0.08}\n",
-      "{'loss': 2.4282, 'grad_norm': 175.9784393310547, 'learning_rate': 8.000000000000001e-06, 'epoch': 0.09}\n",
-      "{'loss': 2.4937, 'grad_norm': 125.54471588134766, 'learning_rate': 9e-06, 'epoch': 0.1}\n",
-      "{'loss': 2.4588, 'grad_norm': 112.201416015625, 'learning_rate': 1e-05, 'epoch': 0.11}\n",
-      "{'loss': 2.2212, 'grad_norm': 118.2083511352539, 'learning_rate': 1.1000000000000001e-05, 'epoch': 0.12}\n",
-      "{'loss': 2.1863, 'grad_norm': 104.86922454833984, 'learning_rate': 1.2e-05, 'epoch': 0.13}\n",
-      "{'loss': 2.1564, 'grad_norm': 613.8680419921875, 'learning_rate': 1.3000000000000001e-05, 'epoch': 0.14}\n",
-      "{'loss': 2.1194, 'grad_norm': 119.76716613769531, 'learning_rate': 1.4000000000000001e-05, 'epoch': 0.15}\n",
-      "{'loss': 2.0239, 'grad_norm': 383.7184143066406, 'learning_rate': 1.5e-05, 'epoch': 0.16}\n",
-      "{'loss': 1.9895, 'grad_norm': 505.9063720703125, 'learning_rate': 1.6000000000000003e-05, 'epoch': 0.17}\n",
-      "{'loss': 2.0215, 'grad_norm': 1352.6005859375, 'learning_rate': 1.7000000000000003e-05, 'epoch': 0.18}\n",
-      "{'loss': 2.0314, 'grad_norm': 135.8369598388672, 'learning_rate': 1.8e-05, 'epoch': 0.2}\n",
-      "{'loss': 1.9008, 'grad_norm': 92.9698257446289, 'learning_rate': 1.9e-05, 'epoch': 0.21}\n",
-      "{'loss': 1.9328, 'grad_norm': 89.91352081298828, 'learning_rate': 2e-05, 'epoch': 0.22}\n",
-      "{'loss': 1.9138, 'grad_norm': 206.99200439453125, 'learning_rate': 2.1e-05, 'epoch': 0.23}\n",
-      "{'loss': 1.7955, 'grad_norm': 84.08918762207031, 'learning_rate': 2.2000000000000003e-05, 'epoch': 0.24}\n",
-      "{'loss': 1.8824, 'grad_norm': 60.092716217041016, 'learning_rate': 2.3000000000000003e-05, 'epoch': 0.25}\n",
-      "{'loss': 1.7885, 'grad_norm': 73.39930725097656, 'learning_rate': 2.4e-05, 'epoch': 0.26}\n",
-      "{'loss': 1.8739, 'grad_norm': 66.56136322021484, 'learning_rate': 2.5e-05, 'epoch': 0.27}\n",
-      "{'loss': 1.7839, 'grad_norm': 54.935638427734375, 'learning_rate': 2.6000000000000002e-05, 'epoch': 0.28}\n",
-      "{'loss': 1.725, 'grad_norm': 82.91046905517578, 'learning_rate': 2.7000000000000002e-05, 'epoch': 0.29}\n"
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
      ]
     }
    ],
